--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,11 +1,75 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__wrapper">
-            <p>2023 © Все права защищены</p>
-            <a href="#header" scroll class="btn-white">
+            <a href="#header" scroll class="footer__logo">
+                Potolkoff<span>MSK</span>                          
+            </a>
+            <nav class="footer__navbar">
+                <ul>
+                    <li><a href="#ceilings" scroll>Цены</a></li>
+                    <li><a href="#calc" scroll>Калькулятор</a></li>
+                    <li><a href="#prices" scroll>Примеры работ</a></li>
+                    <li><a href="#contacts" scroll>Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="footer__pay">
+                <li>
+                    <div>
+                        <svg width="17" height="6" viewBox="0 0 17 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.69119 5.67216H3.29783L2.25299 1.62825C2.20339 1.44223 2.09809 1.27778 1.9432 1.20027C1.55665 1.00549 1.13069 0.850469 0.666016 0.772287V0.616596H2.9106C3.22039 0.616596 3.45272 0.850469 3.49145 1.12209L4.03357 4.0391L5.42625 0.616596H6.78088L4.69119 5.67216ZM7.55541 5.67214H6.2395L7.32307 0.616577H8.63898L7.55541 5.67214ZM10.3413 2.01714C10.38 1.74485 10.6124 1.58916 10.8834 1.58916C11.3094 1.55007 11.7734 1.62825 12.1606 1.82236L12.3929 0.733873C12.0057 0.578182 11.5798 0.5 11.1932 0.5C9.91602 0.5 8.98666 1.20027 8.98666 2.17216C8.98666 2.91152 9.64496 3.29974 10.1096 3.53361C10.6124 3.76681 10.806 3.9225 10.7672 4.1557C10.7672 4.5055 10.38 4.66119 9.99346 4.66119C9.52879 4.66119 9.06411 4.54459 8.63883 4.34981L8.40649 5.43897C8.87117 5.63308 9.37389 5.71126 9.83857 5.71126C11.2706 5.74968 12.1606 5.05008 12.1606 4.00001C12.1606 2.67765 10.3413 2.60014 10.3413 2.01714ZM16.7661 5.67214L15.7213 0.616577H14.599C14.3667 0.616577 14.1343 0.772268 14.0569 1.00547L12.1221 5.67214H13.4767L13.7471 4.93346H15.4115L15.5664 5.67214H16.7661ZM14.7925 1.97805L15.179 3.88341H14.0955L14.7925 1.97805Z" fill="#172B85"/>
+                        </svg>
+                        <svg width="41" height="14" viewBox="0 0 41 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5629 13.6804H7.07954L4.46742 3.57062C4.34344 3.10557 4.08019 2.69444 3.69296 2.50067C2.72658 2.01371 1.66169 1.62617 0.5 1.43072V1.04149H6.11146C6.88592 1.04149 7.46677 1.62617 7.56358 2.30521L8.91889 9.59774L12.4006 1.04149H15.7872L10.5629 13.6804ZM17.7235 13.6804H14.4337L17.1426 1.04144H20.4324L17.7235 13.6804ZM24.6882 4.54286C24.785 3.86213 25.3658 3.4729 26.0435 3.4729C27.1084 3.37518 28.2684 3.57063 29.2365 4.0559L29.8173 1.33468C28.8492 0.945456 27.7843 0.75 26.818 0.75C23.625 0.75 21.3016 2.50068 21.3016 4.9304C21.3016 6.7788 22.9473 7.74934 24.109 8.33403C25.3658 8.91702 25.8499 9.30625 25.7531 9.88925C25.7531 10.7637 24.785 11.153 23.8186 11.153C22.6569 11.153 21.4952 10.8615 20.432 10.3745L19.8512 13.0974C21.0129 13.5827 22.2697 13.7781 23.4314 13.7781C27.0116 13.8742 29.2365 12.1252 29.2365 9.50002C29.2365 6.19412 24.6882 6.00035 24.6882 4.54286ZM40.7503 13.6804L38.1382 1.04144H35.3324C34.7516 1.04144 34.1707 1.43067 33.9771 2.01367L29.1401 13.6804H32.5267L33.2027 11.8336H37.3637L37.7509 13.6804H40.7503ZM35.8162 4.44513L36.7826 9.20853H34.0737L35.8162 4.44513Z" fill="#172B85"/>
+                        </svg>                            
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <svg width="15" height="12" viewBox="0 0 15 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect y="2.60156" width="13" height="8" rx="1" transform="rotate(-11.5413 0 2.60156)" fill="#059467"/>
+                            <rect x="1.25391" y="3" width="13" height="8" rx="1" transform="rotate(1.83479 1.25391 3)" fill="#10B77F"/>
+                            <circle cx="8" cy="7" r="2" fill="white" fill-opacity="0.4"/>
+                        </svg> 
+                        <svg width="37" height="29" viewBox="0 0 37 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="0.332031" y="6.50293" width="32.5" height="20" rx="1" transform="rotate(-11.5413 0.332031 6.50293)" fill="#059467"/>
+                            <rect x="3.47266" y="7.5" width="32.5" height="20" rx="1" transform="rotate(1.83479 3.47266 7.5)" fill="#10B77F"/>
+                            <circle cx="20.332" cy="17.5" r="5" fill="white" fill-opacity="0.4"/>
+                        </svg>                                                       
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5589 8.6046C6.77586 9.29014 5.76013 9.70398 4.65021 9.70398C2.17366 9.70398 0.166016 7.6436 0.166016 5.10199C0.166016 2.56038 2.17366 0.5 4.65021 0.5C5.76013 0.5 6.77586 0.913843 7.5589 1.59938C8.34194 0.913843 9.35767 0.5 10.4676 0.5C12.9441 0.5 14.9518 2.56038 14.9518 5.10199C14.9518 7.6436 12.9441 9.70398 10.4676 9.70398C9.35767 9.70398 8.34194 9.29014 7.5589 8.6046Z" fill="#ED0006"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.55859 8.60459C8.52273 7.7605 9.13408 6.50452 9.13408 5.10199C9.13408 3.69947 8.52273 2.44348 7.55859 1.59939C8.34163 0.913849 9.35737 0.5 10.4673 0.5C12.9439 0.5 14.9515 2.56038 14.9515 5.10199C14.9515 7.6436 12.9439 9.70398 10.4673 9.70398C9.35737 9.70398 8.34163 9.29013 7.55859 8.60459Z" fill="#F9A000"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.55793 1.59961C8.52208 2.4437 9.13344 3.69969 9.13344 5.10223C9.13344 6.50477 8.52208 7.76076 7.55793 8.60485C6.59378 7.76076 5.98242 6.50477 5.98242 5.10223C5.98242 3.69969 6.59378 2.4437 7.55793 1.59961Z" fill="#FF5E00"/>
+                        </svg>
+                        <svg width="38" height="24" viewBox="0 0 38 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.2322 21.0115C17.2746 22.7253 14.7353 23.76 11.9605 23.76C5.7691 23.76 0.75 18.609 0.75 12.255C0.75 5.90095 5.7691 0.75 11.9605 0.75C14.7353 0.75 17.2746 1.78461 19.2322 3.49844C21.1898 1.78461 23.7291 0.75 26.5039 0.75C32.6953 0.75 37.7144 5.90095 37.7144 12.255C37.7144 18.609 32.6953 23.76 26.5039 23.76C23.7291 23.76 21.1898 22.7253 19.2322 21.0115Z" fill="#ED0006"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.2305 21.0115C21.6408 18.9013 23.1692 15.7613 23.1692 12.255C23.1692 8.74867 21.6408 5.6087 19.2305 3.49848C21.1881 1.78462 23.7274 0.75 26.5022 0.75C32.6936 0.75 37.7127 5.90095 37.7127 12.255C37.7127 18.609 32.6936 23.76 26.5022 23.76C23.7274 23.76 21.1881 22.7253 19.2305 21.0115Z" fill="#F9A000"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.2317 3.49805C21.6421 5.60827 23.1705 8.74826 23.1705 12.2546C23.1705 15.7609 21.6421 18.9009 19.2317 21.0111C16.8214 18.9009 15.293 15.7609 15.293 12.2546C15.293 8.74826 16.8214 5.60827 19.2317 3.49805Z" fill="#FF5E00"/>
+                        </svg>                                                      
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9.37073 5.08441C9.37073 7.62602 7.36309 9.6864 4.88654 9.6864C2.40999 9.6864 0.402344 7.62602 0.402344 5.08441C0.402344 2.5428 2.40999 0.482422 4.88654 0.482422C7.36309 0.482422 9.37073 2.5428 9.37073 5.08441Z" fill="#ED0006"/>
+                            <path d="M15.1891 5.08441C15.1891 7.62602 13.1814 9.6864 10.7049 9.6864C8.22834 9.6864 6.2207 7.62602 6.2207 5.08441C6.2207 2.5428 8.22834 0.482422 10.7049 0.482422C13.1814 0.482422 15.1891 2.5428 15.1891 5.08441Z" fill="#0099DF"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.79621 8.58727C8.76036 7.74318 9.37172 6.48719 9.37172 5.08465C9.37172 3.68212 8.76036 2.42612 7.79621 1.58203C6.83206 2.42612 6.2207 3.68212 6.2207 5.08465C6.2207 6.48719 6.83206 7.74318 7.79621 8.58727Z" fill="#6C6BBD"/>
+                        </svg>
+                        <svg width="38" height="24" viewBox="0 0 38 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M22.7647 12.212C22.7647 18.566 17.7456 23.717 11.5542 23.717C5.36285 23.717 0.34375 18.566 0.34375 12.212C0.34375 5.85798 5.36285 0.707031 11.5542 0.707031C17.7456 0.707031 22.7647 5.85798 22.7647 12.212Z" fill="#ED0006"/>
+                            <path d="M37.3077 12.212C37.3077 18.566 32.2886 23.717 26.0972 23.717C19.9058 23.717 14.8867 18.566 14.8867 12.212C14.8867 5.85798 19.9058 0.707031 26.0972 0.707031C32.2886 0.707031 37.3077 5.85798 37.3077 12.212Z" fill="#0099DF"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M18.8255 20.9682C21.2359 18.858 22.7643 15.718 22.7643 12.2116C22.7643 8.70529 21.2359 5.5653 18.8255 3.45508C16.4151 5.5653 14.8867 8.70529 14.8867 12.2116C14.8867 15.718 16.4151 18.858 18.8255 20.9682Z" fill="#6C6BBD"/>
+                        </svg>                                                     
+                    </div>
+                </li>
+            </ul>
+            <a href="#header" class="footer__scrollup" scroll>
                 Наверх
-                <svg width="10" height="20" viewBox="0 0 10 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4.46967 0.485783C4.76256 0.19289 5.23744 0.19289 5.53033 0.485783L9.53033 4.48578C9.82322 4.77868 9.82322 5.25355 9.53033 5.54644C9.23744 5.83934 8.76256 5.83934 8.46967 5.54644L5.75 2.82677V19.0161C5.75 19.4303 5.41421 19.7661 5 19.7661C4.58579 19.7661 4.25 19.4303 4.25 19.0161V2.82677L1.53033 5.54644C1.23744 5.83934 0.762563 5.83934 0.46967 5.54644C0.176777 5.25355 0.176777 4.77868 0.46967 4.48578L4.46967 0.485783Z" fill="#8485F5"/>
+                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.6471 0.646447C3.84236 0.451184 4.15894 0.451184 4.3542 0.646447L7.02087 3.31311C7.21613 3.50838 7.21613 3.82496 7.02087 4.02022C6.82561 4.21548 6.50903 4.21548 6.31376 4.02022L4.50065 2.20711V13C4.50065 13.2761 4.27679 13.5 4.00065 13.5C3.72451 13.5 3.50065 13.2761 3.50065 13V2.20711L1.68754 4.02022C1.49228 4.21548 1.17569 4.21548 0.980431 4.02022C0.785169 3.82496 0.785169 3.50838 0.980431 3.31311L3.6471 0.646447Z" fill="#65758B"/>
                 </svg>                    
             </a>
         </div>
