--- a/src/html/header.html
+++ b/src/html/header.html
@@ -45,7 +45,7 @@
             <nav class="header__navbar">
                 <ul class="header__list">
                     <li class="header__item">
-                        <a href="#production" class="header__link" scroll>
+                        <a href="#options" class="header__link" scroll>
                             Цены
                         </a>
                     </li>
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                     <li class="header__item">
-                        <a href="#price" class="header__link" scroll>
+                        <a href="#production" class="header__link" scroll>
                             Примеры работ
                         </a>
                     </li>
@@ -75,9 +75,9 @@
                 </button>
                 <div class="header__smallnavbar-clue">
                     <ul>
-                        <li><a href="#production" scroll>Цены</a></li>
+                        <li><a href="#options" scroll>Цены</a></li>
                         <li><a href="#calc" scroll>Калькулятор</a></li>
-                        <li><a href="#price" scroll>Примеры работ</a></li>
+                        <li><a href="#production" scroll>Примеры работ</a></li>
                         <li><a href="#contacts" scroll>Контакты</a></li>
                     </ul>
                 </div>
